Fix layout and white space issues with features

--- a/src/Promo.Prelaunch.Presentation/wwwroot/scss/screen.scss
+++ b/src/Promo.Prelaunch.Presentation/wwwroot/scss/screen.scss
@@ -42,6 +42,19 @@ $copy-font: 400 18px/1.5 "Montserrat", "Proxima Nova", "Avenir", "Helvetica", "A
     width: 1px;
 }
 
+@mixin clear-fix {
+
+    &:before,
+    &:after {
+        content: " ";
+        display: table;
+    }
+
+    &:after {
+        clear: both;
+    }
+}
+
 a:link,
 a:visited {
     text-decoration: none;
@@ -158,7 +171,7 @@ body {
     > footer > div {
         margin: 0 auto;
         max-width: 60rem;
-        padding: 0 $large-content-horizontal-padding;
+        padding: 0.7rem $large-content-horizontal-padding;
     }
 
     main {
@@ -246,7 +259,8 @@ small {
 .product-overview {
 
     > section {
-        clear: both;
+        @include clear-fix;
+        margin: 3.3rem 0;
     }
 
     h3 {
@@ -254,16 +268,25 @@ small {
     }
 }
 
-.css-diff-diagram,
+.css-diff-diagram {
+    float: right;
+    margin-top: -8rem;
+    position: relative;
+    right: 5rem;
+}
+
 .css-developer-plugin-diagram {
     float: right;
-    margin-top: -5rem;
+    margin-top: -4rem;
 }
 
 .css-diff-feature,
 .css-developer-plugin-feature {
-    display: inline-block;
-    width: 33rem;
+
+    p {
+        display: inline-block;
+        width: 34rem;
+    }
 }
 
 .css-coverage-diagram {
